--- a/css/layout-sm.css
+++ b/css/layout-sm.css
@@ -1,5 +1,6 @@
 body {
-	max-width: 600px;
+	max-width: 599px;
+	min-height: 350px;
 	margin: 0 auto;
 	font-family: Verdana;
 	background-color: #005656;
@@ -27,9 +28,8 @@ header {
 	left: 5%;
 	margin: 2px auto;
 }
-
-
 .contacts {
+	display: none;
 	font-family:'Noto Serif', serif;
 	font-size: 20pt;
 	position: absolute;
@@ -46,23 +46,33 @@ nav {
 	max-width: 500px;
 	min-width: 300px;
 	margin: 0 auto;
-	height: 220px;
+	height: 100px;
+}
+#top_nav {
+	display: flex;
+	top: 200px;
+	align-items: center;
+	max-width: 600px;
+	min-width: 300px;
+	margin: 15px auto;
+	width: 100%;
+	height: 0;
+	background: rgba(0, 86, 86, 0);
+	
 }
 .nav_button {
 	position: absolute;
 	width: 100%;
-	margin: 5px;
-	height: 20px;
+	margin: 10px;
+	height: 15px;
 }
-
-
 ul.nav_menu li {
 	display: flex;
-	justify-content: spase-between;
+	align-items: center;
 }
 ul.nav_menu li a {
-	width: 450px;
-	padding: 10px;
+	width: 90%;
+	padding: 5px;
 	border: 2px outset #81B5B5;
 	background: linear-gradient(to top, #003535, #048E8E);
 	border-radius: 10px;
@@ -77,22 +87,19 @@ ul.nav_menu li a:active {
 }
 nav ul.nav_menu *, input {
 	border: 2px;
-	padding: 5px 5px;
+	padding: 2px 2px;
 	color: #81B5B5;
 	font-size: 1.2em;
 	text-decoration: none;
 }
 .adresa {
 	position: absolute;
-	top: -50px;
+	top: -45px;
 	right: 20px;
 }
 hr {
 	margin: 10px 10px 2px 10px;
 	border-width: 2px;
-}
-article {
-	
 }
 .news {
 	display: none;
