--- a/css/layout-tab.css
+++ b/css/layout-tab.css
@@ -35,7 +35,7 @@ header {
 .tel, .adresa {
 	color: yellow;
 	font-family:'Noto Serif', serif;
-	font-size: 20pt;
+	font-size: 15pt;
 }
 nav {
 	position: relative;
@@ -46,15 +46,10 @@ nav {
 }
 ul.nav_menu {
 	display: flex;
-	flex-wrap: nowrap;
-	
-}
-nav ul.nav_menu * {
-	font-size: 0.95em;
+	margin: 15px auto;
 }
 ul.nav_menu li a {
-	
-	padding: 5px 15px;
+	padding: 5px 2px;
 	border: 2px outset #81B5B5;
 	background: linear-gradient(to top, #003535, #048E8E);
 	border-radius: 10px;
@@ -66,6 +61,13 @@ ul.nav_menu li a:hover {
 ul.nav_menu li a:active {
 	box-shadow: 0px 0px 10px 5px #003E3E ;
 }
+nav ul.nav_menu * {
+	border: 2px;
+	padding: 5px 2px;
+	color: #81B5B5;
+	font-size: 1.1em;
+	text-decoration: none;
+}
 input {
 	border: 2px;
 	padding: 5px 5px;
@@ -75,7 +77,7 @@ input {
 }
 .adresa {
 	position: absolute;
-	top: -100%;
+	top: -80%;
 	left: 2%;
 }
 hr {
